--- a/index.html
+++ b/index.html
@@ -32,94 +32,7 @@
             Globally incubate standards.
           </p>
           <div class="top__buttons">
-            <button class="top_image_button">
-              <svg
-                width="156"
-                height="66"
-                viewBox="0 0 156 66"
-                fill="none"
-                xmlns="http://www.w3.org/2000/svg"
-              >
-                <g filter="url(#filter0_d_23_21)">
-                  <title>Заголовок 10</title>
-                  <desc>Текст 10</desc>
-                  <text
-                    x="200"
-                    y="360"
-                    fill="black"
-                    font-family="Verdana, serif"
-                    font-size="24"
-                    font-weight="900"
-                  >
-                    Заголовок 10
-                  </text>
-
-                  <path
-                    id="path12"
-                    d="M491 389H66v226h425z"
-                    style="fill: #fff; stroke: #231f20"
-                  />
-                  <text
-                    x="80"
-                    y="410"
-                    fill="grey"
-                    font-size="18"
-                    font-weight="900"
-                  >
-                    Текст 10
-                    <tspan dx="10">Текст 10</tspan>
-                    <tspan dx="10">Текст 10</tspan>
-                    <tspan dx="10">Текст 10</tspan>
-                    <tspan dx="10">Текст 10</tspan>
-                    <tspan dx="-400" dy="20">Текст 10</tspan>
-                  </text>
-                  <rect
-                    x="4"
-                    y="4"
-                    width="140"
-                    height="50"
-                    rx="25"
-                    fill="#F25822"
-                  />
-                </g>
-                <defs>
-                  <filter
-                    id="filter0_d_23_21"
-                    x="0"
-                    y="0"
-                    width="156"
-                    height="66"
-                    filterUnits="userSpaceOnUse"
-                    color-interpolation-filters="sRGB"
-                  >
-                    <feFlood flood-opacity="0" result="BackgroundImageFix" />
-                    <feColorMatrix
-                      in="SourceAlpha"
-                      type="matrix"
-                      values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 127 0"
-                      result="hardAlpha"
-                    />
-                    <feOffset dx="4" dy="4" />
-                    <feGaussianBlur stdDeviation="4" />
-                    <feColorMatrix
-                      type="matrix"
-                      values="0 0 0 0 0.94902 0 0 0 0 0.345098 0 0 0 0 0.133333 0 0 0 0.2 0"
-                    />
-                    <feBlend
-                      mode="normal"
-                      in2="BackgroundImageFix"
-                      result="effect1_dropShadow_23_21"
-                    />
-                    <feBlend
-                      mode="normal"
-                      in="SourceGraphic"
-                      in2="effect1_dropShadow_23_21"
-                      result="shape"
-                    />
-                  </filter>
-                </defs>
-              </svg>
-            </button>
+            <button class="top_image_button">Start Now</button>
             <button class="top_button">Watch Video</button>
           </div>
           <img src="img/top_image.svg" alt="" />
